--- a/client/package.json
+++ b/client/package.json
@@ -28,17 +28,24 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.5.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "filepond": "^4.32.7",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^12.4.6",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-filepond": "^7.1.3",
     "react-hook": "^0.0.1",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
