--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.751.0",
+    "@clerk/express": "^1.3.49",
     "aws-sdk": "^2.1692.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
     "pluralize": "^8.0.0",
+    "stripe": "^17.6.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
