--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-js": "^5.53.0",
     "@clerk/nextjs": "^6.12.0",
     "@clerk/themes": "^2.2.19",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -44,10 +45,12 @@
     "react-filepond": "^7.1.3",
     "react-hook": "^0.0.1",
     "react-hook-form": "^7.54.2",
+    "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
